--- a/index.html
+++ b/index.html
@@ -185,11 +185,38 @@
           
           <div>
           <p class="social-links-title">приєднуйтесь</p>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+        <ul class="social-links">
+          <li class="social-links-icon">
+            <a  href="">
+              <svg>
+                <use href="./images/icon.svg#icon-instagram"> </use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-links-icon">
+            <a href="">
+              <svg>
+                <use href="./images/icon.svg#icon-twitter">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-links-icon">
+            <a href="">
+              <svg>
+                <use href="./images/icon.svg#icon-facebook">
+                </use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-links-icon">
+            <a href="">
+              <svg>
+                <use href="./images/icon.svg#icon-linkedin">
+                </use>
+              </svg>
+            </a>
+          </li>
         </ul>       
           </div>
           
