--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
         <li class="header-icon">
           <svg class="icons"  width="16" height="12">
             <use href="./images/icon.svg#icon-envelope"></use>
-          </svg>
+          </svg>          
         </li>
-        <li class="contact-icon"><a class="link contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li class="contact-icon">
+            <a class="link contact" href="mailto:info@devstudio.com">info@devstudio.com
+             </a></li>
+
+
          <li class="header-icon">
           <svg class="icons" width="10" height="16">
             <use href="./images/icon.svg#icon-smartphone"></use>
           </svg>
         </li>        
-        <li class="contact-icon"><a class="link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="contact-icon">
+          <a class="link contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
 
       </div>
